[tool.poetry]
name = "lesson2"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.1.0"
numpy = "^1.19.1"
scikit-learn-lambda = "^0.1.0"
matplotlib = "^3.3.0"
sklearn = "^0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
